# gtfs-visualizer

./: .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml
.agent/exec_plans/: registry.json
.agent/skills/: milestone_planning.md  plan_hygiene.md  status_master.md
.agent/templates/: EXECPLAN_TEMPLATE.md  MILESTONE_TEMPLATE.md
.agents/exec_plans/: registry.json
.agents/skills/milestone-planning/: SKILL.md
.agents/skills/plan-hygiene/: SKILL.md
.agents/skills/status-master/: SKILL.md
.agents/templates/: EXECPLAN_TEMPLATE.md
.codex/: config.toml
.tmp/agency-a/: feed_summary.json  relationships.json  validation_report.json
.tmp/ms002/: feed_summary.json  normalized_entities.json  relationships.json
.tmp/ms002-missing-shapes/: feed_summary.json  normalized_entities.json  relationships.json
.tmp/ms003-valid/: feed_summary.json
.tmp/ms003-warning/: normalized_entities.json  validation_report.json
.tmp/ms004-invalid/: feed_summary.json  validation_report.json
.tmp/ms004-valid/: relationships.json
.tmp/ms005-smoke/: graph_edges.json  validation_report.json
.tmp/ms006-smoke/: graph_nodes.json  normalized_entities.json
docs/: agent-directory-migration.md
notebooks/: ms008-graph-enrichment-tutorial.ipynb
scripts/: remove-agent-compat.ps1  setup-agent-compat.ps1
src/gtfs_visualizer/: __init__.py  cli.py
src/gtfs_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_feed_loader.py  test_graph.py  test_graph_enrichment.py  test_graph_read.py  test_query.py  test_relationships.py  test_validation.py
(+59 files in other folders)
