[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gtfs-visualizer"
version = "0.1.0"
description = "Local-first GTFS static ingestion foundation for the GTFS Visualizer app."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["-p", "no:cacheprovider", "-p", "no:tmpdir"]
